Only build when new git tag is pushed

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,5 +23,7 @@ workflows:
     jobs:
       - build_and_deploy:
           filters:
+            tags:
+              only: /v\d+(\.\d+)*/
             branches:
-              only: master
+              ignore: /.*/
